exports[`location picker rendering 1`] = `
<div>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Choose location
    </title>
  </SideEffect(Head)>
  <ReportLayout
    goToReportForm={[Function]}
    initialProps={
      Object {
        "code": "CSMCINC",
        "pickLocation": true,
        "service": Object {
          "code": "CSMCINC",
          "hasMetadata": false,
          "metadata": null,
          "name": "Cosmic Incursion",
        },
        "view": "service",
      }
    }
    loopbackGraphql={[Function]}
    showServiceForm={[Function]} />
</div>
`;

exports[`report form rendering 1`] = `
<div>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Report a Problem
    </title>
  </SideEffect(Head)>
  <ReportLayout
    goToReportForm={[Function]}
    initialProps={
      Object {
        "pickLocation": false,
        "serviceSummaries": Array [
          Object {
            "code": "CSMCINC",
            "hasMetadata": true,
            "locationRequired": true,
            "name": "Cosmic Incursion",
          },
        ],
        "view": "summaries",
      }
    }
    loopbackGraphql={[Function]}
    showServiceForm={[Function]} />
</div>
`;

exports[`service page exists rendering 1`] = `
<div>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Cosmic Incursion
    </title>
  </SideEffect(Head)>
  <ReportLayout
    goToReportForm={[Function]}
    initialProps={
      Object {
        "code": "CSMCINC",
        "pickLocation": false,
        "service": Object {
          "code": "CSMCINC",
          "hasMetadata": false,
          "metadata": null,
          "name": "Cosmic Incursion",
        },
        "view": "service",
      }
    }
    loopbackGraphql={[Function]}
    showServiceForm={[Function]} />
</div>
`;

exports[`service page not found rendering 1`] = `
<div>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Not found
    </title>
  </SideEffect(Head)>
  <ReportLayout
    goToReportForm={[Function]}
    initialProps={
      Object {
        "code": "CSMCINC",
        "pickLocation": false,
        "service": null,
        "view": "service",
      }
    }
    loopbackGraphql={[Function]}
    showServiceForm={[Function]} />
</div>
`;
